[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["Wenhao Piao <wenhaopi@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.7"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
